syntax = "proto2";
package com.hr.netty.proto;
option optimize_for = SPEED;
option java_package = "com.hr.netty.proto";
option java_outer_classname = "DataInfo";

message MyMessage {
    enum DataType {
        PersonType = 1;
        StudentTpye = 2;
        DogType = 3;
    }
    required DataType data_type = 1;
    // oneof :
    oneof detaBody {
        Person person = 2;
        Student student = 3;
        dog dog = 4;
    }
}
message Student {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}
message Person {
    optional string name = 1;
    optional int32 age = 2;
}

message dog {
    optional string name = 1;
    optional int32 age = 2;
}



